# nimble

./: .gitignore  README.md  file.csv  file_antiguo.csv  file_short.csv  notas  readMe.txt  trayectoria_koopman100pts.mat  trayectoria_koopman100pts.txt
nimble/: CMakeLists.txt  POSITIONS.mat  output.txt  package.xml  zmpnode.cpp
nimble/0523 motor/P360_con_peso/: metadata.yaml  rosbag2_2024_05_23-16_04_59_0.db3
nimble/0523 motor/P360_sin_peso/: metadata.yaml  rosbag2_2024_05_23-16_27_27_0.db3
nimble/0523 motor/P90_con_peso/: metadata.yaml  rosbag2_2024_05_23-16_06_05_0.db3
nimble/0523 motor/P90_sin_peso/: metadata.yaml  rosbag2_2024_05_23-16_28_04_0.db3
nimble/0523 motor/SENSORPO_flancos_con_peso/: metadata.yaml  rosbag2_2024_05_23-16_19_40_0.db3
nimble/0523 motor/SENSORPO_flancos_sin_peso/: metadata.yaml  rosbag2_2024_05_23-16_20_44_0.db3
nimble/0523 motor/SENSORPO_parada_con_peso_1/: metadata.yaml  rosbag2_2024_05_23-16_24_29_0.db3
nimble/0523 motor/SENSORPO_parada_con_peso_2/: metadata.yaml  rosbag2_2024_05_23-16_25_29_0.db3
nimble/0523 motor/SENSORPO_parada_sin_peso_1/: metadata.yaml  rosbag2_2024_05_23-16_21_44_0.db3
nimble/0523 motor/SENSORPO_parada_sin_peso_2/: metadata.yaml  rosbag2_2024_05_23-16_23_41_0.db3
nimble/0523 motor/SENSORVE_flanco_con_peso/: metadata.yaml  rosbag2_2024_05_23-16_10_20_0.db3
nimble/0523 motor/SENSORVE_flanco_sin_peso_1/: metadata.yaml  rosbag2_2024_05_23-16_11_22_0.db3
nimble/0523 motor/SENSORVE_flanco_sin_peso_2/: metadata.yaml  rosbag2_2024_05_23-16_12_29_0.db3
nimble/0523 motor/SENSORVE_parada_con_peso_1/: metadata.yaml  rosbag2_2024_05_23-16_17_53_0.db3
nimble/0523 motor/SENSORVE_parada_con_peso_2/: metadata.yaml  rosbag2_2024_05_23-16_18_51_0.db3
nimble/0523 motor/SENSORVE_parada_sin_peso/: metadata.yaml  rosbag2_2024_05_23-16_17_00_0.db3
nimble/0523 motor/V100_con_peso/: metadata.yaml  rosbag2_2024_05_23-16_06_35_0.db3
nimble/0523 motor/V100_sin_peso/: metadata.yaml  rosbag2_2024_05_23-16_07_31_0.db3
nimble/0623 motor/P360_conpeso/: metadata.yaml  rosbag2_2024_06_05-16_15_26_0.db3
nimble/0623 motor/P360_sinpeso/: metadata.yaml  rosbag2_2024_06_05-16_11_37_0.db3
nimble/config/: paciente.yaml
nimble/launch/: nimble_launch.py
nimble/src/: cables_robot.cpp  cartesian_traj_service.cpp  control_MSD.cpp  control_ZMP.cpp  fake_H3_node.cpp  fake_cables_node.cpp  frame.cpp  gait_control.cpp  gamming.cpp  hmi.py  hmi_publisher.cpp  kinematic_model.cpp  kineticGraphic.py  states_machine.cpp  traj_generator_service.cpp
(+661 files in other folders)
